[package]
name = "from-request"
version = "0.0.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "Declarative request routing and decoding with async support"
documentation = "https://docs.rs/from-request/"
repository = "https://github.com/1aim/from-request.git"
keywords = ["async", "http", "request", "router", "guard"]
categories = ["web-programming::http-server"]
readme = "README.md"
license = "CC0-1.0"
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
regex = "1.1.0"
futures = "0.1.25"
http = "0.1.16"
hyper = "0.12.24"
serde = { version = "1.0.88", features = ["derive"] }
serde_json = "1.0.38"
serde_urlencoded = "0.5.4"

[dependencies.from-request-derive]
path = "derive"
version = "=0.0.0" # AUTOBUMP

[dev-dependencies]
version-sync = "0.7"

[workspace]

# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
no-dev-version = true
pre-release-commit-message = "Release {{version}}"

# Change the changelog's `Unreleased` section to refer to this release and
# prepend new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased"
replace = "## Unreleased\n\nNo changes.\n\n## {{version}} - {{date}}"

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = 'from-request = "[a-z0-9\\.-]+"'
replace = 'from-request = "{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/from-request/[a-z0-9\\.-]+"
replace = "https://docs.rs/from-request/{{version}}"

[[package.metadata.release.pre-release-replacements]]
file    = "Cargo.toml"
search  = "[a-z0-9\\.-]+\" # AUTOBUMP"
replace = "{{version}}\" # AUTOBUMP"
