[package]
name = "hyperderive"
version = "0.0.2"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = """
Custom derives for the `hyperdrive` crate.

You should never use this crate directly. It does not expose a stable API and
may break at any time. Use `hyperdrive` directly instead.
"""
documentation = "https://docs.rs/hyperdrive/"
repository = "https://github.com/1aim/hyperdrive.git"
license = "CC0-1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.39", default-features = false }
synstructure = { version = "0.11.0", default-features = false }
proc-macro2 = "0.4.30"
quote = { version = "0.6.13", default-features = false }
regex-syntax = "0.6.8"
regex = "1.1.9"
indexmap = "1.0.2"
