[package]
name = "hyperderive"
version = "0.0.2"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = """
Custom derives for the `hyperdrive` crate.

You should never use this crate directly. It does not expose a stable API and
may break at any time. Use `hyperdrive` directly instead.
"""
documentation = "https://docs.rs/hyperdrive/"
repository = "https://github.com/1aim/hyperdrive.git"
license = "CC0-1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "0.15.26"
synstructure = "0.11.0"
proc-macro2 = "0.4.27"
quote = "0.6.11"
regex-syntax = "0.6.5"
regex = "1.1.0"
indexmap = "1.0.2"
