[package]
name = "hyperderive"
version = "0.0.3"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = """
Custom derives for the `hyperdrive` crate.

You should never use this crate directly. It does not expose a stable API and
may break at any time. Use `hyperdrive` directly instead.
"""
documentation = "https://docs.rs/hyperdrive/"
repository = "https://github.com/dac-gmbh/hyperdrive.git"
license = "0BSD"
edition = "2018"

[package.metadata.release]
disable-tag = true  # internal crate needs no git tags
disable-push = true  # things are pushed when Hyperdrive itself is updated
no-dev-version = true
pre-release-commit-message = "Hyperderive {{version}}"

[lib]
proc-macro = true

[dependencies]
syn = "0.15.26"
synstructure = "0.11.0"
proc-macro2 = "0.4.27"
quote = "1.0.2"
regex-syntax = "0.6.5"
regex = "1.1.0"
indexmap = "1.0.2"
